--- a/linked/main.css
+++ b/linked/main.css
@@ -6,6 +6,7 @@ body{
 	color: whitesmoke;
 	font-family: 'Chelsea Market', cursive;
 }
+html, body {touch-action: none;}
 .main{
 	position: absolute;
 	left: 0px;
@@ -35,4 +36,106 @@ body{
 }
 button, input{
 	font-family: 'Chelsea Market', cursive;
+}
+#endTimer{
+	font-size: 30pt;
+	text-align: center;
+	color: #a80b00;
+}
+.jscolor{
+	text-align: center;
+	border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+#nameInput{
+	color: blue;
+	background-color: transparent;
+    border: none;
+    border-color: whitesmoke;
+    border-width: 0px 0px 2px 2px;
+    border-style: solid;
+    padding-left: 3px;
+	border-radius: 3px;
+}
+.nameContainer{
+	margin: 5px;
+}
+#chatBox{
+	width: 500px;
+	text-align: center;
+	margin: auto;
+	margin-top: 10px;
+}
+#messages{
+	border-top-right-radius: 5px;
+	border-top-left-radius: 5px;
+	border: solid 2px dimgray;
+	border-bottom: none;
+	background-color: gray;
+	width: 100%;
+	height: 100px;
+	box-sizing: border-box;
+	overflow-y: scroll;
+	text-align: left;
+}
+.message{
+	overflow-wrap: break-word;
+    overflow-x: hidden;
+	padding-left: 3px;
+	-webkit-touch-callout: text;
+    -webkit-user-select: text;
+    -khtml-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+}
+.message:nth-child(odd){
+	background-color: whitesmoke;
+}
+.message:nth-child(even){
+	background-color: lightgrey;
+}
+#messageBar{
+	width: 100%;
+	line-height: 0;
+}
+#messageInput{
+	padding-left: 3px;
+	border-bottom-left-radius: 5px;
+	box-sizing: border-box;
+	width: 80%;
+	border: solid 2px dimgray;
+	border-top: none;
+}
+#sendMessage{
+	border-bottom-right-radius: 5px;
+	box-sizing: border-box;
+	width: 20%;
+	border: solid 2px dimgray;
+	border-top: none;
+}
+button:hover{
+	cursor: pointer;
+}
+input[type="checkbox"]{
+	vertical-align: middle;
+}
+.circleController{
+	height: 100px;
+	width: 100px;
+	position: absolute;
+	bottom: 100px;
+	left: 100px;
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 50%;
+	text-align: center;
+	transform: rotate(45deg);
+}
+.joystick{
+	background-color: black;
+	height: 35px;
+	width: 35px;
+	border-radius: 50%;
+	display: inline-block;
 }
